ChangeLog for the Astro project.

20200113:
	* add LuminanceFunction infrastructure to the adapter framework

20200105:
	* add missing psf.cpp tool
	* fix missing function in FourierImage.cpp

20200104:
	* add Pseudo, Wiener and constrained VanCittert deconvolution
	* add processing step for deconvolution

20200103:
	* improve the PeakFinder and the ConnectedComponent class
	* add the WindowedImage class that reduces the backing store
	  requirements in the PeakFinder and the ConnectedComponent
	  classes

20200102:
	* add basic horizon format consisting only on azimuth and altitude
	  angles instead of the full format used by the Theodolite app 
	* add default paths to horizon into the configuration database
	* move default configuration to ~/.astro/config.db
	* add Horizon class and sample horizon file
	* added the astrohorizon program
	* make TwoAngles class comparable so it can be used in a set

20191227:
	* add dew heater stuff to Cooler class
	* add dew heater to ASI driver and Simulator

20191226:
	* add operator*() to the YUV<P> template
	* ensure that a failure to get mount data does not invalidate an
	  exposure in the task queue
	* add proper handling of gain in AsiCcd class
	* change default gain value to -1, which means that the current
	  gain of the camera should be used
	* fix set temperature bug in AsiCooler class
	* make task wait times configurable
	* make cooler stable limit configurable

20191225:
	* add temperature class, unify absolute zero value
	* add temperature retrieval to ASI Ccd class
	* add Temperature metadata to Ccd class
	* add Gain retrieval to ASI Ccd class
	* increase temperature stable interval from +-1 degree to +-3 degrees

20191224:
	* add restart command in snowdaemon client
	* improve systemd service file
	* add wait option to snowstar

20190914:
	* make MilkyWay debugging less verbose

20190911:
	* fix const in AzmAltConverter class

20190910:
	* fix off-by-1 error in ConstellationCatalog.cpp

20190909: