@@ -56,6 +56,7 @@ class ProcessorParser {
 	void	startRGB(const attr_t& attrs);
 	void	startRescale(const attr_t& attrs);
 	void	startDestar(const attr_t& attrs);
+	void	startLuminanceMapping(const attr_t& attrs);
 	void	startLuminanceStretching(const attr_t& attrs);
 	void	startSum(const attr_t& attrs);
 	void	startLRGB(const attr_t& attrs);
